--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/user-event": "12.6.2",
     "chalk": "4.1.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-icons": "4.12.0",
+    "react-router-dom": "6"
   },
   "devDependencies": {
     "eslint-config-airbnb": "18.2.1",
